--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "fs-extra": "^10.0.0",
     "hapi-auth-jwt2": "^10.2.0",
+    "image-to-base64": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "node-pg-migrate": "^6.2.1",
